fix mobile white space below navbar

--- a/src/app/shared/stylesheets/components/container.scss
+++ b/src/app/shared/stylesheets/components/container.scss
@@ -1,5 +1,11 @@
 .below-navbar {
-  margin-top: 64px;
+  margin-top: 56px;
+}
+
+@media (min-width: 601px) {
+  .below-navbar {
+    margin-top: 64px;
+  }
 }
 
 .page {
